Fixes and alignments

--- a/style.css
+++ b/style.css
@@ -2,6 +2,34 @@ body {
 	text-align:center;
 }
 
+.game_title {
+	font-family: times, Times New Roman, times-roman, georgia, serif;
+	color: #444;
+	margin: 0;
+	padding: 5% 0px 0px 0px;
+	font-size: 51px;
+	line-height: 44px;
+	letter-spacing: -2px;
+	font-weight: bold;
+}
+
+.map_table {
+	border-collapse: collapse;
+}
+
+tr.button_tr:first-child > .button_td {
+	border-bottom: 1px solid #d5d5c1;
+	border-top: 1px solid #d5d5c1;
+}
+
+tr.button_tr:first-child > td.button_td:first-child {
+	border-left: 1px solid #d5d5c1;
+}
+
+tr.button_tr:first-child > td.button_td:last-child {
+	border-right: 1px solid #d5d5c1;
+}
+
 .map_btn_red {
 	height: 50px;
 	width: 50px;
@@ -74,6 +102,6 @@ body {
 .map_table {
 	margin-left:   auto; 
 	margin-right:  auto;
-	margin-top:    10%;
+	margin-top:    7%;
 	margin-bottom: 10%;
 }
